--- a/app/index.html
+++ b/app/index.html
@@ -29,10 +29,10 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div class="header header-large">
+    <!--<div class="header header-large">
       <div class="container">
         <div class="navbar-header">
-          <!--<img src="images/logo.png" height="20" alt=""/>-->
+          &lt;!&ndash;<img src="images/logo.png" height="20" alt=""/>&ndash;&gt;
           <a href="#" class="navbar-brand">&nbsp;Tony's Site</a>
         </div>
         <ul class="nav nav-pills navbar-right">
@@ -42,7 +42,39 @@
           <li><a href="#">关于</a></li>
         </ul>
       </div>
-    </div>
+    </div>-->
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Tony's Site</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">首页</a></li>
+            <li><a href="#">博客</a></li>
+            <li><a href="#">项目</a></li>
+            <li><a href="#">关于</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
+    </nav>
+
+
 
     <div class="main-container">
       <div class="sections">
