--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
         </div>
         <ul class="nav nav-pills navbar-right">
           <li class="active"><a href="#">首页</a></li>
-          <li><a href="#">博客</a></li>
+          <li><a href="blog_index.html">博客</a></li>
           <li><a href="#">项目</a></li>
           <li><a href="#">关于</a></li>
         </ul>
@@ -82,31 +82,88 @@
         <div id="section3" class="section">
           <div class="container">
             <div class="randabout" data-randabout>
+              <div class="rand-item" style="width: 300px">
+                <h3>这些朋友在站留下了足迹</h3>
+                <p>bala,bala,bala,bala,bala,bala,bala,bala,bala,bala,bala,bala,bala,bala,bala</p>
+                <a class="btn btn-default">到此一游</a>
+              </div>
               <div class="rand-item">
                 <img src="images/photo/1.jpg" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
               </div>
-              <div class="rand-item"><img src="images/photo/2.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/3.png" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/4.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/5.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/6.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/7.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/8.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/9.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/10.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/2.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/3.png" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/4.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/5.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/6.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/7.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/8.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/9.jpg" alt=""/></div>
-              <div class="rand-item"><img src="images/photo/10.jpg" alt=""/></div>
+              <div class="rand-item">
+                <img src="images/photo/2.jpg" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
+              </div>
+              <div class="rand-item">
+                <img src="images/photo/3.png" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
+              </div>
+              <div class="rand-item">
+                <img src="images/photo/4.jpg" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
+              </div>
+              <div class="rand-item">
+                <img src="images/photo/5.jpg" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
+              </div>
+              <div class="rand-item">
+                <img src="images/photo/6.jpg" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
+              </div>
+              <div class="rand-item">
+                <img src="images/photo/7.jpg" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
+              </div>
+              <div class="rand-item">
+                <img src="images/photo/8.jpg" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
+              </div>
+              <div class="rand-item">
+                <img src="images/photo/9.jpg" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
+              </div>
+              <div class="rand-item">
+                <img src="images/photo/10.jpg" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
+              </div>
+              <div class="rand-item">
+                <img src="images/photo/1.jpg" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
+              </div>
+              <div class="rand-item">
+                <img src="images/photo/2.jpg" alt=""/>
+                <div class="info"><h5>张三三</h5>
+                <span>Hello, everyone. I'm Zhang Sansan, holp you all love me.
+                  Hello, everyone. I'm Zhang Sansan, holp you all love me.</span></div>
+              </div>
+
             </div>
           </div>
         </div>
-        <div class="section"></div>
+        <div id="section4" class="section"></div>
         <div class="section"></div>
         <div class="section">
           <div class="footer">
