--- a/app/blog_index.html
+++ b/app/blog_index.html
@@ -25,20 +25,36 @@
   <!-- endbuild -->
 </head>
 <body>
-  <div class="header header-default">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <!--<img src="images/logo.png" height="20" alt=""/>-->
-        <a href="#" class="navbar-brand">&nbsp;Tony's Site</a>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Tony's Site</a>
       </div>
-      <ul class="nav nav-pills navbar-right">
-        <li class="active"><a href="#">首页</a></li>
-        <li><a href="blog_index.html">博客</a></li>
-        <li><a href="#">项目</a></li>
-        <li><a href="#">关于</a></li>
-      </ul>
-    </div>
-  </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/">首页</a></li>
+          <li class="active"><a href="blog_index.html">博客</a></li>
+          <li><a href="#">项目</a></li>
+          <li><a href="#">关于</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container -->
+  </nav>
   <div class="header-place-holder" style="height:60px;"></div>
 
   <section>
