--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
         </ul>
       </div>
     </div>-->
-    <nav class="navbar navbar-inverse navbar-static-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -65,15 +65,15 @@
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">首页</a></li>
-            <li><a href="#">博客</a></li>
+            <li class="active"><a href="/">首页</a></li>
+            <li><a href="blog_index.html">博客</a></li>
             <li><a href="#">项目</a></li>
             <li><a href="#">关于</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
     </nav>
-
+    <div class="header-place-holder" style="height:60px;"></div>
 
 
     <div class="main-container">
