--- a/app/index.html
+++ b/app/index.html
@@ -29,20 +29,7 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <!--<div class="header header-large">
-      <div class="container">
-        <div class="navbar-header">
-          &lt;!&ndash;<img src="images/logo.png" height="20" alt=""/>&ndash;&gt;
-          <a href="#" class="navbar-brand">&nbsp;Tony's Site</a>
-        </div>
-        <ul class="nav nav-pills navbar-right">
-          <li class="active"><a href="#">首页</a></li>
-          <li><a href="blog_index.html">博客</a></li>
-          <li><a href="#">项目</a></li>
-          <li><a href="#">关于</a></li>
-        </ul>
-      </div>
-    </div>-->
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -53,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Tony's Site</a>
+          <a class="navbar-brand" href="/">Tony's Site</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -218,7 +205,7 @@
             </div>
           </div>
         </div>
-        
+
       </div>
     </div><!-- /.projects -->
 
